--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "datatables-colReorder",
-  "version": "1.3.2-rc.1",
+  "name": "datatables-colreorder",
+  "version": "1.3.2-rc.2",
   "description": "colReorder extension for datatables",
   "main": "js/dataTables.colReorder.js",
   "scripts": {
